# Practical-Course-Team-1

./: .gitignore  README.md  demo.py  new_demo.py  pyproject.toml  tester.py
agent/: agent.ipynb  agent.py
agent_pipeline/: .env  README.md  requirements.txt
agent_pipeline/agents/: prompt_refiner.py  target_model.py
agent_pipeline/config/: settings.py
agent_pipeline/scripts/: run_baseline.py  run_plot.py  run_refinement_loop.py
agent_pipeline/utils/: evaluation.py  io.py  metrics_tracker.py
dataset/: implicit_dataset
dataset/WinoBias/: data_preprocessing.ipynb
dataset/crows_pairs/: crows_pairs_anonymized_gender.csv  filtered_gender_bias.csv
dataset/implicit_dataset/: 50 samples - Xiaoyan He.json  implicit_datapoints_new.json  implicit_objects_labled.json  implicit_objects_with_label.json  merged_implicit_250_samples.json  restructured_50_samples_all.json  restructured_50_samples_izzi.json  restructured_50_samples_muqiu.json  restructured_50_samples_saman.json  restructured_50_samples_xiaoyan.json  restructured_50_samples_yikai.json  test_samples.json
model_selection/: explicit_code.py  implicit_code.py
test_results/: Check Rules.txt  data_visualization.ipynb  test_helper.py
test_results/explicit_results/: data_visualization.ipynb  demo.py  explicit_prompting_old.py  explicit_prompting_via_api.py  old_prompting.py  test_helper.py
test_results/implicit_results/: data_visualization.ipynb  implicit_prompt.py  implicit_prompting_old.py  implicit_prompting_via_api.py  log_Llama-3.1-8B-Instruct_2025-06-12 12_02_49.988070.json  prompting_with_api.py  (+1 more)
(+779 files in other folders)
