[project]
name = "practical-course-team-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Muqiu Wang",email = "wangm@cip.ifi.lmu.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
